--- a/src/styles/Home.sass
+++ b/src/styles/Home.sass
@@ -27,7 +27,6 @@
   flex-grow: 1
   display: flex
   
-  
 .ace-content
   border: 1px solid $color-principal1
   border-radius: 0 25px 25px 25px
@@ -40,6 +39,7 @@
   img
     margin-bottom: 7px
     margin-left: 2px
+    aspect-ratio: 32 / 8
   
 .ace
   margin-top: 5px
