--- a/src/styles/Login.sass
+++ b/src/styles/Login.sass
@@ -30,8 +30,11 @@
   border-top-right-radius: 15px 
   display: flex
   align-items: center
+  padding: 0.5rem 1.2rem
+  gap: 10px
   img
-    padding: 1rem 0.6rem 1rem 0.9rem
+    width: 28px
+    aspect-ratio: 28 / 6
   
 .contenido
   font-family: 'Roboto'
@@ -73,6 +76,9 @@
   display: flex
   text-align: center
   padding: 0.3rem
+  img
+    width: 29px
+    aspect-ratio: 1 / 1
   input
     background-color: inherit
     border: none
@@ -91,6 +97,9 @@
   justify-content: center
   align-items: center
   padding: 0.4rem
+  img
+    width: 15px
+    aspect-ratio: 1 / 1
 
 .forgotPassword
   text-align: right
