--- a/src/styles/Profile.sass
+++ b/src/styles/Profile.sass
@@ -11,6 +11,7 @@
   justify-content: center
   img
     margin: 0 auto  
+    aspect-ratio: 1 / 1
 
 .button-container2
   display: none
