--- a/src/styles/Welcome.sass
+++ b/src/styles/Welcome.sass
@@ -112,7 +112,7 @@
 
   .logoP5
     width: 200px
-    height: 50px
+    height: 60px
     background-image: url("../assets/logo_plataforma5_color.svg")    
     background-repeat: no-repeat
   
